# rabbitmq

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: build  codestyle  install  setup  update_packages
src/rabbitmq/: eventlog.py  publisher.py  subscriber.py
src/rabbitmq/database/: db_models.py
src/rabbitmq/models/: config.py
