[tool.poetry]
name = "rabbitmq"
version = "0.1.0"
description = "RabbitMQ Consumer & Producer"
authors = ["Aung Phone Myat"]
readme = "README.md"
packages = [{include = "rabbitmq", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pymysql = "^1.1.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.28"}
sqlalchemy-utils = "^0.41.1"
pydantic-settings = "^2.2.1"
structlog = "^24.1.0"
colorama = "^0.4.6"
netaddr = "^1.2.1"
requests = "^2.31.0"
click = "^8.1.7"
pika = "^1.3.2"

[tool.poetry.scripts]
rabbitmq="rabbitmq.cli:entrypoint"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.3"
isort = "^5.13.2"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
